force-app/main/default/objects/cpm__Guided_Matching_Setup__c/cpm__Guided_Matching_Setup__c.object-meta.xml
<CustomObject>
    <label>Guided Matching Setup</label>
    <nameField>
        <label>Guided Matching Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Matching Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>