force-app/main/default/objects/cpm__Guided_Matching_Setup__c/fields/cpm__Active__c.field-meta.xml
<CustomField>
    <fullName>cpm__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>