force-app/main/default/objects/cpm__Guided_Matching_Setup__c/fields/cpm__Job_Size__c.field-meta.xml
<CustomField>
    <fullName>cpm__Job_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Job Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>