force-app/main/default/objects/cpm__Guided_Matching_Setup__c/fields/cpm__Object__c.field-meta.xml
<CustomField>
    <fullName>cpm__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>