force-app/main/default/objects/cpm__Guided_Matching_Setup__c/fields/cpm__Report_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Report_Sub_Type__c</fullName>
    <label>Report Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>