force-app/main/default/objects/cpm__Guided_Matching_Setup__c/fields/cpm__Rules__c.field-meta.xml
<CustomField>
    <fullName>cpm__Rules__c</fullName>
    <label>Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>