force-app/main/default/objects/cpm__Guided_Matching_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cpm__Report_Type__c</columns>
    <columns>cpm__Report_Sub_Type__c</columns>
    <columns>cpm__Object__c</columns>
    <columns>cpm__Target__c</columns>
    <columns>cpm__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>